<resources>
    <string name="app_name">PIIBioCampus</string>
    <string name="titleConnexion">Connexion</string>
    <string name="txtName">Pseudo</string>
    <string name="txtPassword">Mot de passe</string>
    <string name="txtNewAccount">"Vous n'avez pas de compte, Cliquez-ici"</string>
    <string name="txtAlreadyAccount">"Vous avez déjà un compte, Cliquez-ici"</string>
    <string name="titleCreateAccount">Création de compte</string>
    <string name="txtMail">Adresse e-mail</string>
    <string name="txtBtnConnect">Se connecter</string>
    <string name="txtBtnCreateAccount">Créer un compte</string>
    <string name="titleAdmin">Tableau de bord admin</string>
    <string name="titleActu">Les actus</string>
    <string name="titleExport">Exportation de données</string>
    <string name="titleSearchUser">Gestion des utilisateur·rice·s</string>
    <string name="titleCensus">Arbre de recensement</string>
    <string name="titleListAdmin">Liste des admins</string>
    <string name="titleListCensus">Liste des recensements</string>
    <string name="txtBtnForgetPassWord">"Mot de passe oublié, Cliquez-ici"</string>
    <string name="titleMotDePasseOublie">Mot de passe oublié</string>
    <string name="txtBtnReinitaliserMotDePasse">Envoyer</string>
    <string name="txtWarningMail">Le mail que vous allez recevoir peut se trouver dans vos spams.</string>
    <string name="txtBtnBack">Retour</string>
    <string name="txtBtnWatchProfile">"Profil de l'auteur"</string>
    <string name="camera">camera</string>
    <string name="txtConfirm">Confirmer</string>
    <string name="txtCancel">Annuler</string>
    <string name="txtSearchAdmin">"Gestion Recherche d'utilisateur·rice"</string>
    <string name="txtSearchUsers">"Recherche d'utilisateur·rice"</string>
    <string name="logo_admin">Logo Admin</string>
    <string name="see_more">Voir plus</string>
    <string name="enter_username">Entrez un pseudo...</string>
    <string name="titleProfile">Mon profil</string>
    <string name="actualite">Actualité</string>
    <string name="ban">Bannir</string>
    <string name="titleMap">Carte</string>
    <string name="reprendre_le_recensement">Reprendre le recensement</string>
    <string name="famille_genre_espece">"Famille : —\nGenre : —\nEspèce : —"</string>
    <string name="valider">Valider</string>
    <string name="retour">Retour</string>
    <string name="supprimer">Supprimer</string>
    <string name="stopper">Stopper</string>
    <string name="annuler">Annuler</string>
    <string name="cacheManagerHandlingMessage" formatted="false">Downloading: %d, Errors: %d, Total: %d</string>
    <string name="recherche">Recherche</string>
    <string name="map">Carte</string>
    <string name="bibliotheque">Bibliothèque</string>
    <string name="compte">Compte</string>
</resources>