<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_actualite"
        android:icon="@drawable/newspaper"
        android:title="@string/actualite"
        android:fontFamily="@font/gentium_plus_bold"
        />

    <item
        android:id="@+id/nav_recherche"
        android:icon="@drawable/search"
        android:title="@string/recherche"
        android:fontFamily="@font/gentium_plus_bold"
        />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/map"
        android:title="@string/map"
        android:fontFamily="@font/gentium_plus_bold"
        />

    <item
        android:id="@+id/nav_bibliotheque"
        android:icon="@drawable/book_open"
        android:title="@string/bibliotheque"
        android:fontFamily="@font/gentium_plus_bold"
        />

    <item
        android:id="@+id/nav_compte"
        android:icon="@drawable/user_circle"
        android:title="@string/compte"
        android:fontFamily="@font/gentium_plus_bold"
        />

</menu>

