<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/purpleFigure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rectangle"
        android:translationY="-1000px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logoPurple"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_purple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/titleConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleConnexion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/kg_blank_space_sketch"
        app:layout_constraintTop_toBottomOf="@id/logoPurple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_piibiocampus"
        app:layout_constraintTop_toBottomOf="@id/titleConnexion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtIdentifiant"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fields_round_border"
        android:hint="@string/txtMail"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/passwordLayout"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fields_round_border"
        app:layout_constraintTop_toBottomOf="@id/txtIdentifiant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/txtMdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@id/btnTogglePassword"
            android:background="@android:color/transparent"
            android:hint="@string/txtPassword"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textSize="20sp" />
        <ImageView
            android:id="@+id/btnTogglePassword"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/eye_close" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetPassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txtBtnForgetPassWord"
        style="@style/ButtonLink"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txtNewAccount"
        style="@style/ButtonLink"
        app:layout_constraintTop_toBottomOf="@id/btnResetPassWord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnConnect"
        style="@style/ButtonPrimary"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/btnNoAccount"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>